--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
-本项目是依据ssm开发的简单秒杀系统，慕课网网只有视频，没有源码，自己动手实现了一遍
+本项目是依据ssm开发的简单秒杀系统.
 项目中遇到的问题
   1.mysql的版本问题，mysql5.5和mysql5.6对timestamp的处理发生了些细微的变化，在使用5.5版本的时候一定要注意，如果一张表中有多个字段是timestamp类型，
     并且其中有一个字段指定了DEFAULT CURRENT_TIMESTAMP，其他字段要设置默认值。当然5.6版本就不需要注意这些问题
